--- a/object-detection/notebooks/03-Training/training.ipynb
+++ b/object-detection/notebooks/03-Training/training.ipynb
@@ -21,6 +21,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "#### Training with Google Colab\n",
+    "\n",
+    "***IMPORTANT:*** Make sure you carefully read the rest of this section **BEFORE** running anything in Colab.\n",
+    "\n",
+    "* Use [this Google Colab Notebook](https://colab.research.google.com/github/duckietown/duckietown-lx-recipes/blob/mooc2022/object-detection/assets/colab/dt_object_detection_training.ipynb) to train your model. \n",
+    "\n",
+    "* Make sure the runtime type to GPU-accelerated!\n",
+    "\n",
+    "    Click on Runtime > Change Runtime Type.\n",
+    "\n",
+    "    ![](../../assets/images/colab1.png)\n",
+    "\n",
+    "    Then, in the drop-down menu, select \"GPU\"\n",
+    "\n",
+    "    ![](../../assets/images/colab2.png)\n",
+    "\n",
+    "* When prompted the warning below, click \"*Run anyway*\"\n",
+    "    ![](../../assets/images/colab_instr_3_run_nb.png)\n",
+    "\n",
+    "* When prompted the notification below, click \"*Connect to Google Drive*\"\n",
+    "    ![](../../assets/images/colab_instr_4_connect_gdrive.png)\n",
+    "\n",
+    "***NOTE:*** If you want to view the training statistics and artefacts, do NOT close the Colab notebook after training. Follow the instructions in the following **Debugging and Model Inspection** section to examine these contents.\n",
+    "\n",
+    "Now follow the instructions in the Colab notebook. \n",
+    "For reference, on google colab, training with the default settings takes a few minutes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Upload your dataset\n",
     "\n",
     "We will be training your model on Google Colab.\n",
@@ -32,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +75,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File already exists at: /code/object-detection/assets/duckietown_object_detection_dataset/duckietown_object_detection_dataset.zip\n",
+      "Rename/Move it to run.\n",
+      "No operations performed.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import tempfile\n",
@@ -133,39 +176,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "#### Training with Google Colab\n",
-    "\n",
-    "***IMPORTANT:*** Make sure you carefully read the rest of this section **BEFORE** running anything in Colab.\n",
-    "\n",
-    "* Use [this Google Colab Notebook](https://colab.research.google.com/github/duckietown/duckietown-lx-recipes/blob/mooc2022/object-detection/assets/colab/dt_object_detection_training.ipynb) to train your model. \n",
-    "\n",
-    "* Make sure the runtime type to GPU-accelerated!\n",
-    "\n",
-    "    Click on Runtime > Change Runtime Type.\n",
-    "\n",
-    "    ![](../../assets/images/colab1.png)\n",
-    "\n",
-    "    Then, in the drop-down menu, select \"GPU\"\n",
-    "\n",
-    "    ![](../../assets/images/colab2.png)\n",
-    "\n",
-    "* When prompted the warning below, click \"*Run anyway*\"\n",
-    "    ![](../../assets/images/colab_instr_3_run_nb.png)\n",
-    "\n",
-    "* When prompted the notification below, click \"*Connect to Google Drive*\"\n",
-    "    ![](../../assets/images/colab_instr_4_connect_gdrive.png)\n",
-    "\n",
-    "***NOTE:*** If you want to view the training statistics and artefacts, do NOT close the Colab notebook after training. Follow the instructions in the following **Debugging and Model Inspection** section to examine these contents.\n",
-    "\n",
-    "Now follow the instructions in the Colab notebook. \n",
-    "For reference, on google colab, training with the default settings takes a few minutes.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Optional (**not officially supported**) - local training\n",
     "\n",
     "This is only recommended for experienced Machine Learning enthusiasts.\n",
@@ -228,9 +238,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
-   "name": ""
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
